--- a/game-engine.web/src/main/resources/consoleweb-assets/bower.json
+++ b/game-engine.web/src/main/resources/consoleweb-assets/bower.json
@@ -26,6 +26,7 @@
     "angular-ui-bootstrap-datetimepicker": "^1.3.3",
     "bootstrap": "^3.3.6",
     "bootstrap-vertical-tabs": "^1.2.1",
-    "angular-animate": "^1.5.7"
+    "angular-animate": "^1.5.7",
+    "angular-cron-jobs": "^2.1.1"
   }
 }
